# spotify-api

./: Makefile  mypy.ini  pyproject.toml
app/: deps.py  main.py  settings.py
app/instrumentation/: logging.py
app/routers/: api_router.py
app/routers/endpoints/: authentication.py
