[tool.poetry]
name = "fastapi-spotify"
version = "0.1.0"
description = ""
authors = ["Thomas Caron <thomas.caron00@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_spotify"}]

[tool.poetry.dependencies]
python = ">=3.9,<4"
fastapi = "^0.95.0"
pydantic = {extras = ["dotenv"], version = "^1.10.6"}
uvicorn = {extras = ["standard"], version = "^0.21.1"}
python-json-logger = "^2.0.7"
sqlalchemy = {extras = ["mypy"], version = "^2.0.7"}
alembic = "^1.10.2"
python-multipart = "^0.0.6"
psycopg2-binary = "^2.9.5"
httpx = "^0.23.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
pytest-mypy = "^0.10.3"
pytest-black = "^0.3.12"
# Typing + formatting
mypy = "^1.1.1"
black = "^23.1.0"
isort = "^5.12.0"
autoflake = "^2.0.2"
# Nice to haves
rich = "^13.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
